# treebeard

./: .gitignore  CMakeLists.txt  LICENSE  Notes.txt  README.md  TODOs  treebeard.pptx
configs/: b512_t8_uniform_pipeline8_noPar.json
docs/: GPUFeatures.md  ModelRepresentations.md  SimpleIRListing.txt  SparseIRListing.txt
docs/GPU/: GPUSupport.md
docs/IR/: IRDescription.md
docs/MICRO 2022/: Comments.txt  MIR.tex  Makefile  abstract.tex  conclusions.tex  details.tex  flushend.sty  introduction.tex  looporder.tex  main.tex  opts.tex  outline.md  overview.tex  parallel.tex  peelandunroll.tex  probtiling.tex  refs.bib  related.tex  results.tex  sig-alternate.cls  tiling.tex  treeorder.tex  uniftiling.tex  unrollandjam.tex  vectorization.tex
docs/MICRO 2022/figures/: Figures.pptx  OverviewExample.pptx  OverviewExample_New.pptx  TileShapesSize3.pptx  compiler.pptx
docs/Probabilistic Tiling/: Diagrams.pptx  ProblemAndAlgorithm.tex  prob-tiling.tex
docs/Reductions/: Reductions.md
docs/SOSP 2024/: Makefile  abstract.tex  caching.tex  conclusion.tex  exploring.tex  hir-mir-opts.tex  intro.tex  ir-description.tex  main.tex  motivation.tex  overview.tex  rebuttal.txt  reduction.tex  refs.bib  related.tex  results.tex  revisionplan.md  schedule.tex
docs/SOSP 24/: Outline.md  Overview.md  Reductions.md  SchedulingLang.md
docs/TileShapesAndLUT/: TileShapesAndLUT.md
examples/python/: build_so_from_onnx.py  run_onnx_model.py
onnx_models/: abalone_onnx_model_save.onnx  airline_xgb_model_save.onnx  bosch_xgb_model_save.onnx  epsilon_xgb_model_save.onnx  higgs_xgb_model_save.json.test.sampled.csv  higgs_xgb_model_save.onnx  year_prediction_msd_xgb_model_save.onnx
results/: 4060_thedeep_results.csv  AMDMI2160_results.csv  T400_holmes_results.csv  TreebeardComparisonResults.xlsx  fullexp_vs_at.csv
results/python/: analyze_gpu_auto_schedule_results.py  analyze_gpu_schedule_exploration_results.py  analyze_gpu_speedups_results.py  analyze_random_model_benchmark_results.py  analyze_schedule_sensitivity_data.py  filter_exploration_results.py  plot_inference_stats.py  raw_results_to_csv.py
scripts/: build.sh  build_binaries_for_runtime_tests.sh  build_so_for_model.sh  build_xgboost_so.sh  clean.sh  createCondaEnviroment.sh  gen.sh  gen_gpu.sh  gen_gpu_amd.sh  packageList.txt  run_xgboost_so.sh  setupEnv.sh  setupGPUBenchmarks.sh  setupLLVM.sh  setupPythonEnv.sh  setupSilvanForge.sh  setupSilvanForgeAMD.sh  setupTreebeard.sh  setupTreebeardONNX.sh  setup_llvm.sh  tblgen-dialect.sh
src/: CMakeLists.txt  main.cpp
src/debug-helpers/: CMakeLists.txt  TreePrintRoutines.cpp
src/gpu/: CMakeLists.txt  GPUExecutionHelper.cpp  GPUExecutionHelper.h  GPUModelSerializers.cpp  GPUModelSerializers.h  GPURepresentations.cpp  GPURepresentations.h  GPUSchedules.cpp  GPUSchedules.h  GPUSimtPass.cpp  GPUSupportUtils.cpp  GPUSupportUtils.h  GPUTestUtils.h  LowerGPUToLLVM.cpp  ReorgForestRepresentation.cpp  ReorgForestRepresentation.h  SharedMemUtils.cpp
src/include/: CMakeLists.txt  DecisionForest.h  Logger.h  Ops.td  TiledTree.h  TreeTilingDescriptor.h  TreeTilingUtils.h  TreebeardContext.h
src/json/: CMakeLists.txt  ForestCreatorFactory.cpp  ForestCreatorFactory.h  JSONHelpers.h  forestcreator.h  modeljsonparser.h  onnx.pb.cc  onnx.pb.h  onnxmodelparser.h  xgboostparser.h
src/mlir/: CMakeLists.txt  CodeGenStateMachine.cpp  CodeGenStateMachine.h  ConvertNodeTypeToIndexType.cpp  DecisionTreeAttributes.h  DecisionTreeTypes.h  Dialect.cpp  Dialect.h  ExecutionHelpers.cpp  ExecutionHelpers.h  GPUAutoSchedule.cpp  GPUSPIRVTypeConverter.h  LIRLoweringHelpers.h  LowerDebugHelpers.cpp  LowerEnsembleToMemrefs.cpp  LowerSparseEnsembleToMemrefs.cpp  LowerToLLVM.cpp  LowerToMidLevelIR.cpp  MemrefTypes.h  ModelSerializers.cpp  ModelSerializers.h  OpLoweringUtils.h  ProbabilityBasedTilingTransform.cpp  ReductionOpAttributes.h  ReductionTypeAttribute.h  ReorderTiledTreesByDepth.cpp  Representations.cpp  Representations.h  ScheduleAttribute.h  TraverseTreeTileOpLowering.h  TreeIdx_0_length_5.dot  TypeDefinitions.h  UniformTilingTransformation.cpp  WalkDecisionTreeLoweringPass.cpp
src/python/: treebeard.py  treebeard_runtime_api.py
src/reduction/: CMakeLists.txt  CooperativeReduce.cpp  LegalizeReduceOpPass.cpp  LowerReduceOps.cpp  LowerReduceOps.h
src/runtime/: CMakeLists.txt  runtime.cpp  tbruntime.h
src/schedule/: CMakeLists.txt  schedule.cpp  schedule.h
src/test/: CMakeLists.txt  CodeGenTests.cpp  ForestTestUtils.h  GPUBenchmarkUtils.h  GPUSyntheticXGBTests.cpp  GPUTests.cpp  ONNXTests.cpp  ReductionTests.cpp  RuntimeTests.cpp  StatsTests.cpp  TestMain.cpp  TestUtilsCommon.cpp  TestUtilsCommon.h  XGBoostBenchmarks.cpp  XGBoostGPUBenchmarks.cpp  XGBoostProbTiling.cpp  XGBoostTests.cpp
src/utils/: CMakeLists.txt  CompileUtils.cpp  CompileUtils.h  GPUCompileUtils.cpp  GPUCompileUtils.h  RandomTreeGenerator.cpp  StatsUtils.cpp  StatsUtils.h  TreeTilingDescriptor.cpp  TreeTilingUtils.cpp  TreebeardContext.cpp  XGBoostJSONParserConstructor.cpp
test/python/: cpu_tests.py  generateTests_xgboost.py  gpu_tests.py  run_gpu_benchmarks.py  run_python_benchmarks.py  run_python_tests.py  test_hummingbird.py  test_utils.py  treebeard_parallel_benchmarks.py  treebeard_serial_benchmarks.py
xgb_models/: abalone_xgb_model_save.json.csv  abalone_xgb_model_save.json.test.sampled.csv  airline_xgb_model_save.json  airline_xgb_model_save.json.csv  airline_xgb_model_save.json.test.sampled.csv  bosch_xgb_model_save.json  covtype_xgb_model_save.json.csv  covtype_xgb_model_save.json.test.sampled.csv  epsilon_xgb_model_save.json  higgs_xgb_model_save.json  higgs_xgb_model_save.json.csv  letters_xgb_model_save.json.test.sampled.csv  year_prediction_msd_xgb_model_save.json  year_prediction_msd_xgb_model_save.json.csv
xgb_models/profiles/: abalone.test.csv  airline-ohe.test.csv  airline.test.10M.csv  covtype.test.csv  epsilon.test.csv  higgs.test.csv  letters.test.csv  year_prediction_msd.test.csv
xgb_models/test/: leftheavy_xgb_model.json  rightandleftheavy_xgb_model.json  rightheavy_xgb_model.json
(+461 files in other folders)
